--- a/MVVM/1.2 用webpack4快速搭建开发san helloworld/package.json
+++ b/MVVM/1.2 用webpack4快速搭建开发san helloworld/package.json
@@ -4,27 +4,34 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack-dev-server --open",
-    "server": "node server.js"
+    "build": "webpack --config build/webpack.prod.js",
+    "start": "webpack-dev-server --open --config build/webpack.dev.js",
+    "test": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-loader": "^7.1.4",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "inline-source-map": "^0.6.2",
+    "san": "^3.6.0",
+    "san-loader": "^0.0.7",
     "style-loader": "^0.21.0",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-manifest-plugin": "^2.0.3"
+    "webpack-manifest-plugin": "^2.0.3",
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "san": "^3.6.0",
+    "san-loader": "0.0.7",
+    "san-router": "^1.2.0"
   }
 }
